feat: support task deletion; add http client timeout
